--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,5 +1,5 @@
 FROM quay.io/loki-xer/jarvis-md:latest
-RUN git clone https://github.com/Kingbadan321/Zeta-XD /root/bot/
-WORKDIR /root/bot/
+RUN git clone https://github.com/Kingbadan321/Zeta-XD /root/zeta/
+WORKDIR /root/zeta/
 RUN yarn install --network-concurrency 1
 CMD ["npm", "start"]
