--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Zeta-XD",
-  "version": "1.0.0",
-  "description": "Ezra-md simple multi device WhatsApp Bot.",
+  "version": "1.0.1",
+  "description": "Zeta-XD simple multi device WhatsApp Bot.",
   "main": "./index.js",
   "type": "commonjs",
   "scripts": {
@@ -9,27 +9,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Zeta-XD/ezraa.git"
+    "url": "git+https://github.com/Kingbadan321/Zeta-XD"
   },
   "keywords": [
     "bot",
     "ai",
-    "Ezra",
     "Zeta",
-    "sparkyapi"
   ],
   "author": "Zeta-XD",
-  "developer": "Zeta",
+  "developer": "Badan Ser",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/Zeta-XD/ezraa/issues"
+    "url": "https://github.com/Kingbadan321/Zeta-XD/issues"
   },
-  "homepage": "https://github.com/Zeta-XD/ezraa#readme",
+  "homepage": "https://github.com/Kingbadan321/Zeta-XD#readme",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.6.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "3.0.0",
-    "@neeraj-x0/textpro": "^1.0.3",
+    "@google/generative-ai": "^0.5.0",
     "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.3.3",
     "bitly": "^7.1.2",
