--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Zeta-XD",
   "description": "Zeta-XD Multi Device whatsapp bot",
-  "logo": "i.imgur.com/QxRga5I.jpeg",
+  "logo": "https://i.imgur.com/wMyw9Au.jpeg",
   "keywords": ["whatsapp"],
   "repository": "https://github.com/Kingbadan321/Zeta-XD",
   "website": "https://github.com/Kingbadan321/Zeta-XD",
