--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sharp": "^0.30.7",
     "simple-git": "^3.14.1",
     "spinnies": "^0.5.1",
+    "spotifydl-core": "^0.2.0",
     "spotifydl-x": "^0.3.5",
     "sqlite3": "^5.1.1",
     "supervisor": "^0.12.0",
